--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.447.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
