--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-icons": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.447.0",
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
