--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react-icons": "^3.0.0",
