--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "js-confetti": "^0.12.0",
     "lucide-react": "^0.447.0",
     "next": "^14.2.15",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.3",
     "prisma": "^5.21.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
