--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "keytar": "^7.9.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "prisma": "^6.1.0",
     "pusher": "^5.2.0",
