--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "prisma": "^6.1.0",
+    "punycode": "^2.3.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "19.0.0",
