--- a/package.json
+++ b/package.json
@@ -10,50 +10,51 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/react-icons": "^3.0.0",
-    "@typescript-eslint/types": "^8.19.1",
-    "@upstash/redis": "^1.34.3",
+    "@typescript-eslint/types": "^8.40.0",
+    "@upstash/redis": "^1.35.3",
+    "caniuse-lite": "^1.0.30001737",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "idb": "^8.0.1",
+    "idb": "^8.0.3",
     "js-confetti": "^0.12.0",
     "keytar": "^7.9.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
-    "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.4",
-    "prisma": "^6.1.0",
+    "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
+    "prisma": "^6.14.0",
     "punycode": "^2.3.1",
     "pusher": "^5.2.0",
-    "pusher-js": "^8.4.0-rc2",
+    "pusher-js": "^8.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "sonner": "^1.7.1",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.17.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.2"
   },
   "overrides": {
     "@types/react": "19.0.2",
